Bug 294910 - Clone Layer of a Clone Layer dealt wrong on removing the source
Summary: Clone Layer of a Clone Layer dealt wrong on removing the source
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-27 08:55 UTC by Dmitry Kazakov
Modified: 2012-03-02 18:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2012-02-27 08:55:15 UTC
Clone Layer 2 (of CL1)
Clone Layer 1 (of PL1)
Paint Layer 1

1) Remove Paint Layer 1
2) Remove Clone Layer 1

Clone Layer 2 should reincarnate into a paint layer after the second removal, but it doesn't.
Comment 1 Dmitry Kazakov 2012-03-02 18:09:45 UTC
Git commit c22a5bf7d81fb3b449399c69045a5b1f236f8943 by Dmitry Kazakov.
Committed on 02/03/2012 at 20:02.
Pushed by dkazakov into branch 'master'.

Fix transitive clones bug

Also fixes a crash on undo/redo of the clone layers
(unittests shows the case)

M  +37   -14   krita/image/commands/kis_image_layer_remove_command.cpp
M  +1    -0    krita/image/commands/kis_image_layer_remove_command.h
M  +2    -1    krita/image/kis_clone_layer.cpp
M  +1    -1    krita/image/kis_clone_layer.h
M  +40   -0    krita/image/tests/kis_clone_layer_test.cpp
M  +1    -0    krita/image/tests/kis_clone_layer_test.h

http://commits.kde.org/calligra/c22a5bf7d81fb3b449399c69045a5b1f236f8943