Fix transitive clones bug

Also fixes a crash on undo/redo of the clone layers
(unittests shows the case)

BUG:294910