krita/image/tests/kis_clone_layer_test.h
@@ -32,6 +32,7 @@ private slots:
     void testOriginalRefresh();
 
     void testRemoveSourceLayer();
+    void testUndoingRemovingSource();
     void testCyclingGroupLayer();
 };
 
